@@ -871,34 +871,35 @@ The keys that are defined for mhc-calendar-mode are:
     (if (not (file-readable-p fname))
 	()
       (goto-char (point-max))
-      (insert "\n")
-      (insert
-       (with-temp-buffer ;; hnf-mode.el require APEL :-)
-	 (insert-file-contents fname)
-	 (goto-char (point-min))
-	 (while (not (eobp))
-	   (cond  ;; NEW, LNEW adhoc suport
-	    ((looking-at "^NEW[ \t]+\\(.*\\)$")
-	     (setq str (buffer-substring (match-beginning 1) (match-end 1)))
-	     (mhc-face-put str 'mhc-calendar-hnf-face-new)
-	     (setq header (format "%s%d" headmark i))
-	     (mhc-face-put header 'mhc-calendar-hnf-face-tag)
-	     (setq i (1+ i))
-	     (setq summary (concat summary "     " header " " str "\n")))
-	    ((looking-at "^LNEW[ \t]+\\([^ \t]+\\)[ \t]+\\(.*\\)$")
-	     (setq uri (concat "<"
-			       (buffer-substring (match-beginning 1) (match-end 1))
-			       ">"))
-	     (mhc-face-put uri 'mhc-calendar-hnf-face-uri)
-	     (setq str (buffer-substring (match-beginning 2) (match-end 2)))
-	     (mhc-face-put str 'mhc-calendar-hnf-face-new)
-	     (setq header (format "%s%d" headmark i))
-	     (mhc-face-put header 'mhc-calendar-hnf-face-tag)
-	     (setq i (1+ i))
-	     (setq summary (concat summary "     " header " " str " " uri "\n"))))
-	   (forward-line))
-	 (put-text-property 0 (length summary) 'mhc-calendar-summary-hnf-prop t summary)
-	 summary))
+      (with-temp-buffer;; hnf-mode.el require APEL :-)
+	(insert-file-contents fname)
+	(goto-char (point-min))
+	(while (not (eobp))
+	  (cond;; NEW, LNEW adhoc suport
+	   ((looking-at "^NEW[ \t]+\\(.*\\)$")
+	    (setq str (buffer-substring (match-beginning 1) (match-end 1)))
+	    (mhc-face-put str 'mhc-calendar-hnf-face-new)
+	    (setq header (format "%s%d" headmark i))
+	    (mhc-face-put header 'mhc-calendar-hnf-face-tag)
+	    (setq i (1+ i))
+	    (setq summary (concat summary "     " header " " str "\n")))
+	   ((looking-at "^LNEW[ \t]+\\([^ \t]+\\)[ \t]+\\(.*\\)$")
+	    (setq uri (concat "<"
+			      (buffer-substring (match-beginning 1) (match-end 1))
+			      ">"))
+	    (mhc-face-put uri 'mhc-calendar-hnf-face-uri)
+	    (setq str (buffer-substring (match-beginning 2) (match-end 2)))
+	    (mhc-face-put str 'mhc-calendar-hnf-face-new)
+	    (setq header (format "%s%d" headmark i))
+	    (mhc-face-put header 'mhc-calendar-hnf-face-tag)
+	    (setq i (1+ i))
+	    (setq summary (concat summary "     " header " " str " " uri "\n"))))
+	  (forward-line))
+	(put-text-property 0 (length summary) 'mhc-calendar-summary-hnf-prop t summary))
+      (if summary
+	  (progn
+	    (insert "\n")
+	    (insert summary)))
       (delete-char -1)
       (set-buffer-modified-p nil))))
 
